# Guess-a-word-C

./: .gitignore  CMakeLists.txt  ai.c  ai.h  dict.c  dict.h  game.c  game.h  human.c  human.h  main.c  word.c  word.h  words
